# slack_client_rs

./: Cargo.toml
src/: client.rs  lib.rs  types.rs
